agregando nuevas funciones con jquery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
     <h1 class="color1">Hola Github!</h1>
-    <p>Este es mi primer repositorio</p>
+    <p class="color2">Este es mi primer repositorio</p>
 </div>
 
     <!--Script de Bootstrap y jquiery-->
