se agrega favicon a la app web

--- a/desafio_viajes_chile/index.html
+++ b/desafio_viajes_chile/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Manuel Ruiz Uribe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"content="viajes, paisajes, Chile, fotos, lugares, naturaleza, asombro, norte, sur, experiencias, aventuras, ocio, tiempo libre"/>
     <title>Viajes Chile Manuel Ruiz</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
